[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/Dialog/dbp.png" type="Texture" id=1]
[ext_resource path="res://Asset/Dialog/DialogPointer.png" type="Texture" id=2]
[ext_resource path="res://Asset/Font/Rabbits Goody.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Asset/Dialog/bph.png" type="Texture" id=4]
[ext_resource path="res://DialogBox/Dialog.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 650, 120 ), Vector2( 650, 125 ), Vector2( 650, 120 ) ]
}

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogBox" type="Control" parent="."]
anchor_left = 0.491
anchor_top = 1.0
anchor_right = 0.491
anchor_bottom = 1.0
margin_left = -340.0
margin_top = -170.0
margin_right = 340.0
margin_bottom = -19.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "This is a Placeholder
Hello?"
visible_characters = 0
text = "This is a Placeholder
Hello?"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="DialogPointer" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 650, 120.672 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/DialogPointer"]
anims/IDLE = SubResource( 2 )

[node name="SpeakerBox" type="Control" parent="."]
anchor_left = 0.163
anchor_top = 0.641
anchor_right = 0.163
anchor_bottom = 0.641
margin_left = 2.088
margin_top = 13.4
margin_right = 99.088
margin_bottom = 35.4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="SpeakerBox"]
margin_right = 94.0
margin_bottom = 29.0
bbcode_enabled = true
bbcode_text = "PlaceHolder"
text = "PlaceHolder"

[node name="Choice" type="Control" parent="."]
anchor_left = 0.387
anchor_top = 0.204
anchor_right = 0.387
anchor_bottom = 0.204
margin_left = -20.4843
margin_top = -0.137833
margin_right = 19.5157
margin_bottom = 39.8622
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Choice"]
margin_left = -48.4757
margin_top = 9.11893
margin_right = 34.5243
margin_bottom = 44.1189
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2( 200, 300 )

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2( 800, 300 )

[node name="Spawn3" type="Node2D" parent="."]
position = Vector2( 400, 300 )

[node name="Spawn4" type="Node2D" parent="."]
position = Vector2( 600, 300 )
